syntax = "proto3";
package gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

import "github.com/solo-io/gloo/projects/gloo/api/v1/options/tcp/tcp.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/connection_limit/connection_limit.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/local_ratelimit/local_ratelimit.proto";

// Optional, feature-specific configuration that lives on tcp listeners
message TcpListenerOptions {
    tcp.options.gloo.solo.io.TcpProxySettings tcp_proxy_settings = 3;

    // ConnectionLimit can be used to limit the number of active connections per gateway. Useful for resource protection as well as DoS prevention.
    connection_limit.options.gloo.solo.io.ConnectionLimit connection_limit = 4;

    // LocalRatelimit can be used to rate limit the connections per gateway at the L4 layer.
    // It uses envoy's own local rate limit filter to do so, without the need for an external rate limit server to be set up.
    local_ratelimit.options.gloo.solo.io.TokenBucket local_ratelimit = 5;
}